# rocPRIM

./: .clang-format  .gitignore  .gitlab-ci-gputest.yml  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Jenkinsfile  LICENSE.txt  NOTICES.txt  README.md  conanfile.py  custom.properties  header.hpp.in  install  rdeps.py  rmake.py  rtest.py  rtest.xml  test.file  toolchain-linux.cmake  toolchain-windows.cmake
benchmark/: CMakeLists.txt  ConfigAutotune.cmake  ConfigAutotuneSettings.cmake  benchmark_block_adjacent_difference.cpp  benchmark_block_discontinuity.cpp  benchmark_block_exchange.cpp  benchmark_block_histogram.cpp  benchmark_block_radix_rank.cpp  benchmark_block_radix_sort.cpp  benchmark_block_reduce.cpp  benchmark_block_run_length_decode.cpp  benchmark_block_scan.cpp  benchmark_block_sort.cpp  benchmark_block_sort.parallel.hpp  benchmark_config_dispatch.cpp  benchmark_device_adjacent_difference.cpp  benchmark_device_adjacent_difference.parallel.cpp.in  benchmark_device_adjacent_difference.parallel.hpp  benchmark_device_batch_copy.cpp  benchmark_device_batch_memcpy.cpp  benchmark_device_binary_search.cpp  benchmark_device_binary_search.parallel.cpp.in  benchmark_device_binary_search.parallel.hpp  benchmark_device_find_first_of.cpp  benchmark_device_find_first_of.hpp  benchmark_device_find_first_of.parallel.cpp.in  benchmark_device_find_first_of.parallel.hpp  benchmark_device_histogram.cpp  benchmark_device_histogram.parallel.cpp.in  benchmark_device_histogram.parallel.hpp  benchmark_device_memory.cpp  benchmark_device_merge.cpp  benchmark_device_merge_sort.cpp  benchmark_device_merge_sort.hpp  benchmark_device_merge_sort.parallel.cpp.in  benchmark_device_merge_sort.parallel.hpp  benchmark_device_merge_sort_block_merge.cpp  benchmark_device_merge_sort_block_merge.parallel.cpp.in  benchmark_device_merge_sort_block_merge.parallel.hpp  benchmark_device_merge_sort_block_sort.cpp  (+127 more)
example/: CMakeLists.txt  example_hc_temporary_storage.cpp  example_hip_temporary_storage.cpp  example_temporary_storage.cpp  example_utils.hpp
hipcub/: CMakeLists.txt
hipcub/include/hipcub/: config.hpp  hipcub.hpp  hipcub_version.hpp.in
rocprim/: CMakeLists.txt
rocprim/include/rocprim/: config.hpp  functional.hpp  hip_bfloat16.h  intrinsics.hpp  iterator.hpp  rocprim.hpp  rocprim_hc.hpp  rocprim_hip.hpp  rocprim_version.hpp.in  type_traits.hpp  types.hpp
test/: CMakeLists.txt  common_test_header.hpp  test_device_apis.cpp  test_hc_api.cpp  test_hip_api.cpp  test_rocprim_basics.cpp  test_rocprim_hc_basic.cpp  test_rocprim_hc_block_discontinuity.cpp  test_rocprim_hc_block_exchange.cpp  test_rocprim_hc_block_load.cpp  test_rocprim_hc_block_load_store.cpp  test_rocprim_hc_block_radix_sort.cpp  test_rocprim_hc_block_reduce.cpp  test_rocprim_hc_block_scan.cpp  test_rocprim_hc_device_radix_sort.cpp  test_rocprim_hc_device_reduce.cpp  test_rocprim_hc_device_reduce_by_key.cpp  test_rocprim_hc_device_scan.cpp  test_rocprim_hc_device_segmented_reduce.cpp  test_rocprim_hc_device_transform.cpp  test_rocprim_hc_intrinsics.cpp  test_rocprim_hc_warp_reduce.cpp  test_rocprim_hc_warp_scan.cpp  test_rocprim_hc_warp_sort.cpp  test_rocprim_hip_block_discontinuity.cpp  test_rocprim_hip_block_exchange.cpp  test_rocprim_hip_block_load_store.cpp  test_rocprim_hip_block_radix_sort.cpp  test_rocprim_hip_block_reduce.cpp  test_rocprim_hip_block_scan.cpp  test_rocprim_hip_device_radix_sort.cpp  test_rocprim_hip_device_reduce.cpp  test_rocprim_hip_device_reduce_by_key.cpp  test_rocprim_hip_device_scan.cpp  test_rocprim_hip_device_segmented_reduce.cpp  test_rocprim_hip_device_transform.cpp  test_rocprim_hip_warp_scan.cpp  test_utils.hpp  test_utils_host.hpp
test/ci/: 241_resources.json  243_resources.json  244_resources.json
test/extra/: CMakeLists.txt  test_hipcub_package.cpp  test_rocprim_package.cpp
test/hip/: test_hip_api.cpp  test_hip_async_copy.cpp  test_ordered_block_id.cpp
test/hipcub/: CMakeLists.txt  test_hipcub_basic.cpp  test_hipcub_block_discontinuity.cpp  test_hipcub_block_exchange.cpp  test_hipcub_block_histogram.cpp  test_hipcub_block_load_store.cpp  test_hipcub_block_radix_sort.cpp  test_hipcub_block_reduce.cpp  test_hipcub_block_scan.cpp  test_hipcub_device_histogram.cpp  test_hipcub_device_radix_sort.cpp  test_hipcub_device_reduce.cpp  test_hipcub_device_reduce_by_key.cpp  test_hipcub_device_run_length_encode.cpp  test_hipcub_device_scan.cpp  test_hipcub_device_segmented_radix_sort.cpp  test_hipcub_device_segmented_reduce.cpp  test_hipcub_device_select.cpp  test_hipcub_util_ptx.cpp  test_hipcub_warp_reduce.cpp  test_hipcub_warp_scan.cpp  test_utils.hpp
test/hipcub/detail/: get_hipcub_version.cpp  get_hipcub_version.hpp
test/hipgraph/: CMakeLists.txt  test_hipgraph_algs.cpp  test_hipgraph_basic.cpp
test/rocprim/: CMakeLists.txt  bounds_checking_iterator.hpp  identity_iterator.hpp  indirect_iterator.hpp  test_arg_index_iterator.cpp  test_basic.cpp  test_block_adjacent_difference.cpp  test_block_adjacent_difference.cpp.in  test_block_adjacent_difference.floating.cpp  test_block_adjacent_difference.hpp  test_block_adjacent_difference.integral.cpp  test_block_adjacent_difference.kernels.hpp  test_block_discontinuity.cpp  test_block_discontinuity.cpp.in  test_block_discontinuity.hpp  test_block_discontinuity.kernels.hpp  test_block_exchange.cpp  test_block_exchange.hpp  test_block_exchange.kernels.hpp  test_block_histogram.cpp  test_block_histogram.hpp  test_block_histogram.kernels.hpp  test_block_load_store.cpp  test_block_load_store.hpp  test_block_load_store.kernels.hpp  test_block_radix_rank.cpp  test_block_radix_rank.cpp.in  test_block_radix_rank.hpp  test_block_radix_rank.kernels.hpp  test_block_radix_sort.cpp  test_block_radix_sort.cpp.in  test_block_radix_sort.hpp  test_block_radix_sort.kernels.hpp  test_block_reduce.cpp  test_block_reduce.hpp  test_block_reduce.kernels.hpp  test_block_reduce_hmm.cpp  test_block_run_length_decode.cpp  test_block_scan.cpp  test_block_scan.cpp.in  (+164 more)
test/rocprim/detail/: get_rocprim_version.cpp  get_rocprim_version.hpp  get_rocprim_version_hc.cpp  (+1 more)
(+492 files in other folders)
